--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       name="description"
       content="A simple web app to visualize how well-travelled you are in the Philippines"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/ph-blank.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
