--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>var ezoicId = 456356; </script>
+    <script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js"></script> 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1919396112849413"
      crossorigin="anonymous"></script>
     <meta charset="utf-8" />
