tweak: add opengraph image

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>My Philippines Travel Level</title>
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://my-philippines-travel-level.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="My Philippines Travel Level">
+    <meta property="og:description" content="A simple web app to visualize how well-travelled you are in the Philippines">
+    <meta property="og:image" content="/social-preview.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="my-philippines-travel-level.com">
+    <meta property="twitter:url" content="https://my-philippines-travel-level.com">
+    <meta name="twitter:title" content="My Philippines Travel Level">
+    <meta name="twitter:description" content="A simple web app to visualize how well-travelled you are in the Philippines">
+    <meta name="twitter:image" content="/social-preview.jpg">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
