--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="My Philippines Travel Level">
     <meta property="og:description" content="A simple web app to visualize how well-travelled you are in the Philippines">
-    <meta property="og:image" content="/social-preview.jpg">
+    <meta property="og:image" content="https://www.my-philippines-travel-level.com/social-preview.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -43,7 +43,7 @@
     <meta property="twitter:url" content="https://my-philippines-travel-level.com">
     <meta name="twitter:title" content="My Philippines Travel Level">
     <meta name="twitter:description" content="A simple web app to visualize how well-travelled you are in the Philippines">
-    <meta name="twitter:image" content="/social-preview.jpg">
+    <meta name="twitter:image" content="https://www.my-philippines-travel-level.com/social-preview.jpg">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
