--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="A simple web app to visualize how well-travelled you are in the Philippines"
     />
+    <link rel="canonical" href="https://my-philippines-travel-level.com/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ph-blank.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
